log.txt
mkdir classes; javac -classpath /opt/hadoop-2.7.2/share/hadoop/common/*:/opt/hadoop-2.7.2/share/hadoop/yarn/lib/*:/opt/hadoop-2.7.2/share/hadoop/mapreduce/lib/*:/opt/hadoop-2.7.2/share/hadoop/mapreduce/*:./  -d classes src/*.java; jar cvf PageRank.jar classes;echo classes/*.class; hadoop jar PageRank.jar PageRank
mkdir: cannot create directory ‘classes’: File exists
src/TrustMapper.java:16: error: method write in interface TaskInputOutputContext<KEYIN,VALUEIN,KEYOUT,VALUEOUT> cannot be applied to given types;
	context.write(key, value);
	       ^
  required: IntWritable,NodeOrDouble
  found: IntWritable,Node
  reason: actual argument Node cannot be converted to NodeOrDouble by method invocation conversion
  where KEYIN,VALUEIN,KEYOUT,VALUEOUT are type-variables:
    KEYIN extends Object declared in interface TaskInputOutputContext
    VALUEIN extends Object declared in interface TaskInputOutputContext
    KEYOUT extends Object declared in interface TaskInputOutputContext
    VALUEOUT extends Object declared in interface TaskInputOutputContext
src/TrustMapper.java:20: error: method write in interface TaskInputOutputContext<KEYIN,VALUEIN,KEYOUT,VALUEOUT> cannot be applied to given types;
		context.write(outgoing.next(),p);
		       ^
  required: IntWritable,NodeOrDouble
  found: Object,double
  reason: actual argument Object cannot be converted to IntWritable by method invocation conversion
  where KEYIN,VALUEIN,KEYOUT,VALUEOUT are type-variables:
    KEYIN extends Object declared in interface TaskInputOutputContext
    VALUEIN extends Object declared in interface TaskInputOutputContext
    KEYOUT extends Object declared in interface TaskInputOutputContext
    VALUEOUT extends Object declared in interface TaskInputOutputContext
src/TrustReducer.java:20: error: incompatible types
		NodeOrDouble nod = it.next();
		                          ^
  required: NodeOrDouble
  found:    Object
Note: src/PageRank.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors
added manifest
adding: classes/(in = 0) (out= 0)(stored 0%)
adding: classes/PageRank.class(in = 3357) (out= 1789)(deflated 46%)
adding: classes/NodeOrDouble.class(in = 1471) (out= 802)(deflated 45%)
adding: classes/NodeRecordReader.class(in = 3117) (out= 1540)(deflated 50%)
adding: classes/NodeInputFormat.class(in = 823) (out= 362)(deflated 56%)
adding: classes/NodeOutputFormat.class(in = 1566) (out= 685)(deflated 56%)
adding: classes/Node.class(in = 2745) (out= 1478)(deflated 46%)
adding: classes/LeftoverMapper.class(in = 1059) (out= 433)(deflated 59%)
adding: classes/NodeRecordWriter.class(in = 2130) (out= 1150)(deflated 46%)
adding: classes/LeftoverReducer.class(in = 1190) (out= 486)(deflated 59%)
classes/LeftoverMapper.class classes/LeftoverReducer.class classes/Node.class classes/NodeInputFormat.class classes/NodeOrDouble.class classes/NodeOutputFormat.class classes/NodeRecordReader.class classes/NodeRecordWriter.class classes/PageRank.class
Exception in thread "main" java.lang.NoClassDefFoundError: TrustMapper
	at PageRank.getTrustJob(PageRank.java:91)
	at PageRank.main(PageRank.java:23)
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:606)
	at org.apache.hadoop.util.RunJar.run(RunJar.java:221)
	at org.apache.hadoop.util.RunJar.main(RunJar.java:136)
Caused by: java.lang.ClassNotFoundException: TrustMapper
	at java.net.URLClassLoader$1.run(URLClassLoader.java:366)
	at java.net.URLClassLoader$1.run(URLClassLoader.java:355)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.net.URLClassLoader.findClass(URLClassLoader.java:354)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:425)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:358)
	... 8 more
Makefile:15: recipe for target 'default' failed
make: *** [default] Error 1
